# GIT

./: .gitignore  .gitmodules  README.md  Работы  соборка_образа_dx.odt
10_Protocol/1/server/: CMakeLists.txt
11_Converter/STM32F407/: .gitignore  .project  CMakeLists.txt
11_Converter/STM32F407/EWARM/: STM32F407-DISCOVERY.ewd
11_Converter/STM32F407/STM32F407-DISCOVERY/: .mxproject  STM32F407-DISCOVERY.ioc
14_Сборка_исходников_от_Краснова/1/Frimware_R6_LME_02_STM32F429ZI_RTOS_Netconn/: .hgignore  CMakeLists.txt  R6_LME_02_STM32F429ZI_RTOS_Netconn.ioc  R6_LME_02_docklight.ptp  STM32F429ZITX_FLASH.ld  STM32F429ZITX_RAM.ld
15_Документы_НИОКР/json_parser/: .gitignore  CMakeLists.txt  example.json  index1.json  jsonParser.cpp  main.cpp  main.h
15_Документы_НИОКР/json_parser/src/: jsonParser.cpp  main.cpp  main.h
15_Документы_НИОКР/json_parser/src_qr_codes/: main.cpp
15_Документы_НИОКР/json_parser/zlib/: .gitignore  CMakeLists.txt
16_WEB_ARHIV/create_content_for_web/: AppRun  CMakeLists.txt  Read.Me  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  graph_info.json
16_WEB_ARHIV/create_content_for_web/rapidjson/: .gitignore
16_WEB_ARHIV/create_content_for_web/src/: crc32.cpp  createHTML.cpp  dateTime.cpp  extractZip.cpp  jsonParser.cpp  main.cpp  main.h
17_createNiokrArkhivDoc/createNiokrArkhivDoc/: CMakeLists.txt  config.ini
17_createNiokrArkhivDoc/createNiokrArkhivDoc/src/: jsonParser.cpp  main.cpp  main.h
17_createNiokrArkhivDoc/createNiokrArkhivDoc/ГРЛМ.301122.007СБ/: index.json
18_create_soft_links/create_soft_links/: CMakeLists.txt  config.ini  main.qml
18_create_soft_links/create_soft_links/src/: ListWidget1.pro  appcore.cpp  appcore.h  application.qrc  main.cpp  main.h  widget.cpp  widget.h  widget.ui
1_display/: CMakeLists.txt  CMakeLists.txt.user.d9d09ef  README.md  conanbuildinfo.cmake  conanfile.txt  conaninfo.txt  devices_all  devices_offline  display.sh  git-info.txt  graph_info.json  serial_number  Настройка Bridge  Сервис
1_display/config/: config.ini
1_display/inc/: devices.h  display.h  main.h  sysCmd.h
1_display/src/: datetime.cpp  devices.cpp  display.cpp  main.cpp  sysCmd.cpp  test.cpp
21_MT9092_to_STM_GITLAB/myWork_2_03/: CMakeLists.txt  STM32F429VGTX_FLASH.ld  Shema.dwg  Shema.dwl  Shema.dwl2
21_MT9092_to_STM_GITLAB/myWork_2_03/MDK-ARM/: Firmware_R_6_DSX_04M_STM32F429.uvguix.Professional  Firmware_R_6_DSX_04M_STM32F429.uvguix.roman.ganaza  Firmware_R_6_DSX_04M_STM32F429.uvprojx  startup_stm32f429xx.lst  startup_stm32f429xx.s
21_MT9092_to_STM_GITLAB/myWork_2_03/PROJECT_IN_CUBE/: .cproject  .mxproject  .project  Firmware_R_6_DSX_04M_STM32F429.ioc  STM32F429VGTX_RAM.ld
21_MT9092_to_STM_GITLAB/myWork_2_03/Src/: HDLC_Rx.c  HDLC_Rx_low_level.c  HDLC_Tx.c  ST-BUS_SAI_in_out.c  audio_in_out.c  codec.c  main.c  mt9092_logic.c  mt9092_registers.c  spi_interface.c
23_atmega328_audiotrigger/project/: CMakeLists.txt  adc.c  adc.h  main.c  main.h
26_Bootloader_F407/: .cproject  .gitignore  .mxproject  .project  Bootloader_F407.ioc  CMakeLists.txt  GBB.odt  QtCreator.icls  STM32F407VGTX_FLASH.ld  STM32F407VGTX_RAM.ld  version_Bootloader
26_Bootloader_F407/Core/Inc/: config.h.in  fatfs_sd.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
26_Bootloader_F407/Core/Src/: fatfs_sd.c  main.c  main.c.autosave  stm32f4xx_hal_msp.c  stm32f4xx_it.c
26_Bootloader_F407/Docs/: .~lock.Flash.ods#  Flash.ods  Links
26_Bootloader_F407/FATFS/App/: fatfs.c
26_Bootloader_F407/Firmware/Bootloader_1_0/: Bootloader_1_0.hex
26_Bootloader_F407/Firmware/Bootloader_1_1/: Bootloader_1_1.hex
26_Bootloader_F407/STM32F407_SD_bootloader-master/: CMakeLists.txt
2_ips2/configurator/: CMakeLists.txt  README.md  conanfile.txt
2_ips2/configurator/cmake/: flags.cmake  install.cmake  project.cmake
2_ips2/configurator/dialogs/: CMakeLists.txt
2_ips2/configurator/include/: statusbar.h
2_ips2/configurator/main/: CMakeLists.txt  base_table.h  main.cpp  main_window.cpp  main_window.h  main_window.ui
2_ips2/configurator/runtests/: main.cpp
2_ips2/configurator_ets/dialogs/: CMakeLists.txt  cmake_install.cmake
2_ips2/configurator_ets/main/: CMakeLists.txt  base_table.h  cmake_install.cmake
2_ips2/islp/: CMakeLists.txt  Doxyfile  README.md  ips_helpers.hpp  islp.mk  main.cpp
2_ips2/islp/doc/: html.7z
2_ips2/islp/islp/: basicmessage.cpp  basicmessage.hpp  clientsm.cpp  (+7 more)
2_ips2_CMake/: .gitignore  CMakeLists.txt  README.md
2_ips2_WIN_CMake/: .gitignore  CMakeLists.txt  README.md
4_promwad2/: .cproject  .gitignore  CMakeLists.txt  Doxyfile  README.md  STM32F777IITx_FLASH.ld  newSTM32H753IITX_FLASH.ld  stm32f7_voip.qbs
4_promwad2/DOCs/: PIINS.ods
4_promwad2/Docs/: .~lock.Pins_promwad2.ods#  Pins_SC4_SC2.ods  Pins_promwad2.ods  SC-2  UART
4_promwad2/Inc/: main.h  stm32f7xx_it.h
4_promwad2/Src/: main.cpp  stm32f7xx_hal_msp.c  system_stm32f7xx.c
4_promwad2/doc/: Doxyfile_stm32f1
4_promwad2/print_screens/: building_log
5_Amplifier_UM_300/ZS_2_STM32F103RC6/: CMakeLists.txt  main.c  stm32f103c8t6.ld  stm32f103r8t6.ld  stm32f103rct6.ld
6_promwad2_step_by_step/H753_CXX/: .gitignore  CMakeLists.txt  H753_voip.qbs  QT-STM32746G-Discovery.map  STM32H753IITX_FLASH.ld
6_promwad2_step_by_step/H753_new/: .gitignore  CMakeLists.txt  H753_new.qbs  STM32H753IITX_FLASH.ld  versions_IPS
6_promwad2_step_by_step/SC2_FreeRTOS_CUBE_and_CMake/: .cproject  .gitignore  .mxproject  .project  .~lock.Модули.ods#  CMakeLists.txt  FreeRTOS_promwad2.ioc  STM32H753IITX_FLASH.ld  ips_sc4_pdo.ioc  Модули.ods
6_promwad2_step_by_step/SC2_FreeRTOS_CUBE_and_CMake_v2/: .gitignore  CMakeLists.txt  STM32H753IITX_FLASH.ld  stm32f7_voip.qbs
6_promwad2_step_by_step/attempt_H753/: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  PW_attempt.ioc  STM32H753IITX_FLASH.ld
9_configurator_ets_future/runtests/: CMakeLists.txt  conanfile.txt
display/: CMakeLists.txt  conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json  main.cpp
display/inc/: main.h
display/src/: datetime.cpp  devices.cpp  main.cpp  test.cpp
(+22349 files in other folders)
